fix bottom margin not working on mobile

--- a/src/components/footer.css
+++ b/src/components/footer.css
@@ -13,19 +13,16 @@
     height: 20px;
 }
 
-@media only screen and (min-width: 720px) {
-    .footer {
-        width: 250px;
-        margin-top: 0;
-    }
-
-    .icon {
-        width: 35px;
-        height: 35px;
-    }
+.footer-spacer {
+    height: 50px;
+    width:100%;
+    background:transparent;
 }
 
 @media only screen and (min-width: 720px) {
+    .footer-spacer {
+        display: none;
+    }
     .footer {
         width: 250px;
         margin-top: 0;
